enahnce logging to support a per/module log file